PlzNavigate: add DumpWithoutCrashing for invalid main resource request.

This CL is an attempt to solve https://crbug.com/705508
A DumpWithoutCrashing is added on the renderer side to get more
informations.

BUG=705508

Review-Url: https://codereview.chromium.org/2805693002
Cr-Commit-Position: refs/heads/master@{#462517}

Former-commit-id: 35be0078448bc5bc5198eac37562089682a555c1